tests/paczka1/fuzzy1/64684611.err
Error in line 1: tHuXGxBK S796 21,3
Error in line 13: tHuXGxBK S796 22,12
Error in line 9: nAzQ6gll A82 69,3
Error in line 2: E3xdymG A82 73,5
Error in line 22: E3xdymG A811 97,6
Error in line 28: E3xdymG A523 28,6
Error in line 24: WXQ A811 77,7
Error in line 29: E3xdymG A82 26,9
